--- a/aps-aeccim-explorer/wwwroot/main.css
+++ b/aps-aeccim-explorer/wwwroot/main.css
@@ -23,6 +23,17 @@
   right: 0;
   padding-top: 3em;
   bottom: 0;
+  resize: vertical;
+  overflow: auto;
+}
+
+#viewer {
+  width: 100%;
+  right: 0;
+  bottom: 0;
+  height: 30%;
+  visibility: hidden;
+  position: absolute;
 }
 
 #header > * {
@@ -39,3 +50,17 @@
   height: auto;
   margin-right: auto;
 }
+
+.form-check-input {
+  clear: left;
+}
+
+.form-switch.form-switch-sm {
+  margin-bottom: 0.5rem; /* JUST FOR STYLING PURPOSE */
+}
+
+  .form-switch.form-switch-sm .form-check-input {
+    height: 2em;
+    width: calc(2em + 1.5em);
+    border-radius: 2rem;
+  }
